[gd_scene load_steps=2 format=3 uid="uid://bukxjngm12qwb"]

[ext_resource type="Script" uid="uid://dqr18yfmort68" path="res://client/client.gd" id="1_6t3qf"]

[node name="Client" type="Node2D"]
script = ExtResource("1_6t3qf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ServerShutdown" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Server Shutdown"

[node name="ClientDisconnect" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Disconnect
"

[node name="DataTest" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "test data send"
